# basic-invoice-rest

./: .gitignore  README.MD  api.js  rest-example.cabal  rest-example.nix  script.sh  shell.nix
client/: restexample-client.cabal
client/src/Restexample/Client/: Invoice.hs  User.hs
client/src/Restexample/Client/Invoice/: Comment.hs
docs/: index.html
docs/Docs/: jquery-nightly.js
docs/post/: index.html
docs/post/comment/: index.html
docs/test/: index.html
docs/test/import/: index.html
docs/user/: index.html
example-api/: .#ApiTypes.hs  Api.hs  ApiTypes.hs  Example.hs
example-api/Api/: Customer.hs  Invoice.hs  Post.hs  Test.hs  User.hs
example-api/Api/Invoice/: Comment.hs
example-api/Type/: Comment.hs  CreateInvoice.hs  Customer.hs  CustomerInfo.hs  CustomerInvoice.hs  CustomerSignupError.hs  Invoice.hs  InvoiceError.hs  UserComment.hs  UserInvoice.hs
my-client/: restexample-client.cabal
my-client/src/: Main.hs
